Fix .title-container h3 & h4 position with align-self

--- a/style.css
+++ b/style.css
@@ -386,6 +386,14 @@ body .article-container:nth-child(odd) summary {
   flex-direction: row;
 }
 
+body .article-container:nth-child(odd) summary .title-container h3{
+  align-self: flex-start;
+}
+
+body .article-container:nth-child(odd) summary .title-container h4{
+  align-self: flex-start;
+}
+
 .article-container article {
   padding: 1.1rem;
   line-height: 1.25;
@@ -393,10 +401,10 @@ body .article-container:nth-child(odd) summary {
 }
 
 .title-container h3 {
-  text-align: center;
+  align-self: flex-end;
 }
 .title-container h4 {
-  text-align: center;
+  align-self: flex-end;
 }
 
 .article-container {
